--- a/PdfManager/LoginWindow.xaml
+++ b/PdfManager/LoginWindow.xaml
@@ -5,7 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PdfManager"
         mc:Ignorable="d"
-        Title="登录PDF管理系统" Height="189.231" Width="275.769" Loaded="Window_Loaded">
+        Title="登录PDF管理系统" Height="190" Width="275" Loaded="Window_Loaded" MinWidth="275" MinHeight="190" KeyUp="Window_KeyUp">
+    <Window.CommandBindings>
+        <CommandBinding Command="ApplicationCommands.Save" Executed="CommandBinding_Executed" CanExecute="CommandBinding_CanExecute"/>
+    </Window.CommandBindings>
+    <Window.InputBindings>
+        <KeyBinding Command="ApplicationCommands.Save" Key="Return"/>
+    </Window.InputBindings>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="25"/>
@@ -22,7 +28,7 @@
         <Label Content="密码" HorizontalAlignment="Right" Grid.Row="2" VerticalAlignment="Top"/>
         <TextBox x:Name="txtUsername" Grid.Column="1" HorizontalAlignment="Left"  Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Height="20" Width="143" Margin="0,5,0,0" VerticalContentAlignment="Bottom"/>
         <PasswordBox x:Name="txtPassword" Grid.Column="1" HorizontalAlignment="Left"  Grid.Row="2" VerticalAlignment="Top" Height="20" Width="143" Margin="0,5,0,0" VerticalContentAlignment="Bottom"/>
-        <Button x:Name="btnLogin" Content="登陆" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Top" Width="91" Height="25" Click="btnLogin_Click"/>
+        <Button x:Name="btnLogin" Content="登陆" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Top" Width="91" Height="25" Click="btnLogin_Click" Command="ApplicationCommands.Save"/>
         <TextBlock x:Name="txbError" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="3" TextWrapping="Wrap" VerticalAlignment="Top" Height="25" Width="179" Foreground="Red"/>
     </Grid>
 </Window>
