--- a/PdfManager/App.xaml
+++ b/PdfManager/App.xaml
@@ -1,9 +1,13 @@
-﻿<Application x:Class="PdfManager.App"
+﻿<Application
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:PdfManager"
+             xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="PdfManager.App"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+
+        <System:String x:Key="Other1Name">其他1</System:String>
+        <System:String x:Key="Other2Name">其他2</System:String>
+
     </Application.Resources>
 </Application>
