--- a/PdfManager/LoginWindow.xaml
+++ b/PdfManager/LoginWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PdfManager"
         mc:Ignorable="d"
-        Title="登录PDF管理系统" Height="190" Width="275" Loaded="Window_Loaded" MinWidth="275" MinHeight="190" KeyUp="Window_KeyUp">
+        Title="登录PDF管理系统" Height="190" Width="275" Loaded="Window_Loaded" MinWidth="275" MinHeight="190" KeyUp="Window_KeyUp" WindowStartupLocation="CenterScreen">
     <Window.CommandBindings>
         <CommandBinding Command="ApplicationCommands.Save" Executed="CommandBinding_Executed" CanExecute="CommandBinding_CanExecute"/>
     </Window.CommandBindings>
