--- a/PdfManager/MainWindow.xaml
+++ b/PdfManager/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:PdfManager"
         xmlns:Data="clr-namespace:PdfManager.Data" x:Class="PdfManager.MainWindow"
         mc:Ignorable="d"
-        Title="成都电力机械厂PDF文档管理系统" Height="480" Width="800" Loaded="Window_Loaded" MinWidth="600" MinHeight="400" WindowStartupLocation="CenterScreen" WindowState="Maximized">
+        Title="成都电力机械厂PDF文档管理系统" Height="480" Width="800" Loaded="Window_Loaded" MinWidth="800" MinHeight="400" WindowStartupLocation="CenterScreen" WindowState="Maximized">
     <Window.Resources>
         <Style x:Key="BlackMenuItem" TargetType="MenuItem">
             <Style.Triggers>
@@ -20,6 +20,8 @@
         <CommandBinding Command="ApplicationCommands.New" Executed="New_Executed" CanExecute="True_CanExecute"/>
         <CommandBinding Command="ApplicationCommands.Find" Executed="Find_Executed" CanExecute="Find_CanExecute"/>
         <CommandBinding Command="ApplicationCommands.Delete" Executed="Delete_Executed" CanExecute="Delete_CanExecute"/>
+        <CommandBinding Command="ApplicationCommands.Save" Executed="Export_Executed" CanExecute="True_CanExecute"/>
+        <CommandBinding Command="ApplicationCommands.Open" Executed="Import_Executed" CanExecute="True_CanExecute"/>
         <CommandBinding Command="NavigationCommands.PreviousPage" Executed="Prev_Executed" CanExecute="Prev_CanExecute"/>
         <CommandBinding Command="NavigationCommands.NextPage" Executed="Next_Executed" CanExecute="Next_CanExecute"/>
     </Window.CommandBindings>
@@ -36,7 +38,7 @@
                 </MenuItem>
                 <StackPanel Orientation="Horizontal">
                     <Image Source="black/Find.png" Style="{DynamicResource BlackIconStyle}"/>
-                    <TextBox x:Name="txtKeyword" Width="100" MaxLength="20" Margin="3,0,0,0">
+                    <TextBox x:Name="txtKeyword" Width="120" MaxLength="20" Margin="3,0,0,0">
                         <TextBox.InputBindings>
                             <KeyBinding Key="Return" Command="ApplicationCommands.Find"/>
                         </TextBox.InputBindings>
@@ -61,14 +63,33 @@
                         <Image Source="black/Left.png" Style="{DynamicResource BlackIconStyle}"/>
                     </MenuItem.Icon>
                 </MenuItem>
+                <Label x:Name="labTittle" Content="{Binding Tittle}" MaxWidth="300" >
+                    <Label.DataContext>
+                        <Data:PdfFile/>
+                    </Label.DataContext>
+                </Label>
                 <MenuItem x:Name="btnNext" Command="NavigationCommands.NextPage" Style="{DynamicResource BlackMenuItem}" Header="">
                     <MenuItem.Icon>
                         <Image Source="black/Right.png" Style="{DynamicResource BlackIconStyle}"/>
                     </MenuItem.Icon>
                 </MenuItem>
                 <Separator/>
-                <MenuItem/>
-                <MenuItem/>
+                <MenuItem x:Name="btnExpert" Command="ApplicationCommands.Save" Style="{DynamicResource BlackMenuItem}">
+                    <MenuItem.Icon>
+                        <Image Source="black/Disk-upload.png" Style="{DynamicResource BlackIconStyle}"/>
+                    </MenuItem.Icon>
+                    <MenuItem.Header>
+                        <TextBlock VerticalAlignment="Center">导出</TextBlock>
+                    </MenuItem.Header>
+                </MenuItem>
+                <MenuItem x:Name="btnImport" Command="ApplicationCommands.Open" Style="{DynamicResource BlackMenuItem}">
+                    <MenuItem.Icon>
+                        <Image Source="black/Disk-download.png" Style="{DynamicResource BlackIconStyle}"/>
+                    </MenuItem.Icon>
+                    <MenuItem.Header>
+                        <TextBlock VerticalAlignment="Center">导入</TextBlock>
+                    </MenuItem.Header>
+                </MenuItem>
             </Menu>
             <TreeView x:Name="trvResult"  Width="150" VerticalContentAlignment="Stretch" SelectedItemChanged="trvResult_SelectedItemChanged">
                 <TreeView.DataContext>
